remove redundant layout, add showSummary switch

--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -39,8 +39,10 @@ params:
   # copyrightHolder: Copyright Holder
   # Show the "Powered by Hugo-Tufte and Hugo."
   showPoweredBy: false
-  # Site wide kill switch
+  # Site wide kill switch for date in pages
   hidedate: false
+  # Site wide kill switch for post summary on home page
+  showSummary: true
   # Site wide kill switch for LaTeX support
   math: true
   KaTeXVersion: 0.16.4
