--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -1,14 +1,13 @@
-# Remove this if your site folder is not inside the theme folder
-themesDir: "../../"
-
 # Set your theme here
 theme: hugo-tufte
+# Remove this if your site folder is not inside the theme folder
+themesDir: "../.."
 # The language of your website (see https://www.andiamo.co.uk/resources/iso-language-codes/ for reference)
 languageCode: en-US
 # If you write Chinese, Japanese or Korean, this helps with word counting
 hasCJKLanguage: true
 # The url of your website
-baseurl: "https://example.com/"
+baseurl: "https://huto-tufte.netlify.app/"
 # The title of your website (shown on all the pages)
 title: "Hugo-Tufte Theme Example Site"
 canonifyurls: true
