--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-command = "cd exampleSite && hugo --minify --gc --themesDir .. --theme ."
+command = "cd exampleSite && hugo --buildDrafts --minify --gc --themesDir .. --theme ."
 publish = "exampleSite/public"
 
 [build.environment]
