add option for sans-serif (can be seen in VDQI)

--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -46,7 +46,12 @@ params:
   math: true
   KaTeXVersion: 0.16.4
   KaTeXCDN: "//cdn.jsdelivr.net/npm"
-  # Common social website links, please comment the unused ones.
+  # #### Control style flavours of the website
+  # Use upright & sans-serif font for subtitles
+  sansSubtitle: false
+  # Make the page centred in screen
+  centerArticle: false
+  # ######## Common social website links, please comment the unused ones.
   # (if your favorite one is not in the list, please head to the footer menu below and add an entry)
   # Please note that some of the value below are only provided as an exemple, perhaps the computed isn't valid
   # github: slashformotion
